--- a/branches/EADAndroidEngine_1/res/layout/game_activity_canvas.xml
+++ b/branches/EADAndroidEngine_1/res/layout/game_activity_canvas.xml
@@ -8,5 +8,9 @@
     <es.eucm.eadandroid.ecore.GameSurfaceView
       android:layout_width="fill_parent"
       android:layout_height="fill_parent" android:id="@+id/canvas_surface"/>
+      
+    <es.eucm.eadandroid.ecore.VideoSurfaceView
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent" android:id="@+id/video_surface"/>
 
 </FrameLayout>
