--- a/branches/EADAndroidEngine_1/res/layout/local_games_activity.xml
+++ b/branches/EADAndroidEngine_1/res/layout/local_games_activity.xml
@@ -3,6 +3,5 @@
 	android:layout_height="fill_parent" android:layout_width="fill_parent">
 	<ListView android:id="@android:id/list" android:layout_width="wrap_content"
 		android:layout_height="wrap_content"/>
-	<TextView android:id="@android:id/empty" android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:text="@string/no_games"/>
+	<TextView android:id="@android:id/empty" android:text="@string/no_games" android:layout_height="fill_parent" android:layout_width="fill_parent" android:gravity="center_vertical|center_horizontal"/>
 </LinearLayout>
