--- a/branches/EADAndroidEngine_1/res/layout/detailed_game_activity.xml
+++ b/branches/EADAndroidEngine_1/res/layout/detailed_game_activity.xml
@@ -1,35 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:orientation="horizontal">
-	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_width="fill_parent" android:layout_height="fill_parent"
-		android:shrinkColumns="1">
-		<TableRow>
-			<ImageView android:id="@+id/Viewdetallado"
-				android:layout_height="70px" android:layout_width="70px"
-				android:layout_margin="10px"></ImageView>
-			<LinearLayout android:id="@+id/LinearLayout02"
-				android:gravity="right" android:layout_height="fill_parent" android:orientation="horizontal" android:layout_width="fill_parent">
-				<TextView android:text="@+id/titulo" android:id="@+id/titulodetallado"
-					android:textSize="22px" android:layout_height="fill_parent" android:focusable="false"
-					android:layout_width="fill_parent" android:paddingLeft="10dip" android:gravity="center"></TextView>
-			</LinearLayout>
-		</TableRow>
 
-		<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
-			<TextView></TextView>
-			<TextView android:text="@+id/texto" android:id="@+id/textodetallado"
-				android:textSize="14px" android:focusable="false" android:paddingLeft="20dip" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
-		</TableRow>
-		<TableRow>
-			<TextView android:layout_height="fill_parent" android:layout_width="fill_parent"></TextView>
-			<Button android:id="@+id/botondetallado" android:textSize="14px"
-				android:text="Descargar" android:layout_width="fill_parent"
-				android:layout_height="wrap_content"></Button>
-		</TableRow>
+<FrameLayout android:id="@+id/detailed_game_f_layout"
+			android:layout_width="fill_parent" android:layout_height="fill_parent"
+			xmlns:android="http://schemas.android.com/apk/res/android">
+			<ScrollView android:id="@+id/ScrollView01"
+				android:layout_width="fill_parent" android:scrollbars="vertical"
+				android:fadeScrollbars="true" android:layout_height="380dip">
+				<FrameLayout android:id="@+id/FrameLayout01"
+					android:layout_width="fill_parent" android:layout_gravity="top"
+					android:layout_height="wrap_content">
+					<LinearLayout android:id="@+id/LinearLayout02"
+						android:orientation="vertical" android:layout_width="fill_parent"
+						android:layout_height="fill_parent">
+						<LinearLayout android:id="@+id/detailed_game_linear_layout"
+							android:layout_gravity="top" android:layout_width="fill_parent"
+							android:layout_height="wrap_content" android:paddingBottom="20dip"
+							android:paddingTop="20dip" android:paddingRight="20dip"
+							android:paddingLeft="20dip">
+							<ImageView android:id="@+id/detailed_game_image_icon"
+								android:layout_width="wrap_content" android:layout_height="wrap_content"
+								android:src="@drawable/icon">
+							</ImageView>
+							<LinearLayout android:id="@+id/LinearLayout01"
+								android:layout_height="fill_parent" android:layout_width="fill_parent"
+								android:layout_marginLeft="20dip">
+
+								<TextView android:text="No title" android:id="@+id/detailed_game_title"
+									android:layout_width="fill_parent" android:layout_height="wrap_content"
+									android:gravity="center_horizontal" android:layout_gravity="center_vertical"
+									android:textSize="20dip"></TextView>
+
+							</LinearLayout>
+						</LinearLayout>
+						<TextView android:id="@+id/detailed_game_description"
+							android:layout_width="fill_parent" android:text="No description"
+							android:layout_height="fill_parent" android:layout_marginLeft="20dip" android:layout_marginRight="20dip">
+						</TextView>
 
 
-	</TableLayout>
+					</LinearLayout>
+				</FrameLayout>
+			</ScrollView>
+<Button android:text="Download" android:id="@+id/detailed_game_download_button"
+				android:layout_height="wrap_content" android:layout_gravity="bottom|center_horizontal"
+				android:layout_width="fill_parent"></Button>
 
-</LinearLayout>
+</FrameLayout>
