--- a/branches/EADAndroidEngine_1/res/values/colores.xml
+++ b/branches/EADAndroidEngine_1/res/values/colores.xml
@@ -3,4 +3,5 @@
 <color name="Marron">#db7b21</color>
 <color name="White">#FFFFFFFF</color>
 <color name="GRAY">#848484</color>
+<color name="Light_Green">#ACFA58</color>
 </resources>
