--- a/branches/EADAndroidEngine_1/res/layout/local_games_actvitiy_listitem.xml
+++ b/branches/EADAndroidEngine_1/res/layout/local_games_actvitiy_listitem.xml
@@ -21,14 +21,12 @@
             android:layout_height="0dip"
             android:layout_weight="1"
             android:gravity="center_vertical"
-        />
+        android:paddingLeft="12dip" android:textSize="16dip"/>
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="0dip"
             android:layout_weight="1" 
             android:id="@+id/bottomtext"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-        />
+            android:ellipsize="marquee" android:textColor="@color/Light_Green" android:textSize="12dip" android:paddingLeft="12dip" android:paddingBottom="12dip" android:gravity="bottom" android:drawableLeft="@drawable/green_tick_2"/>
     </LinearLayout>
 </LinearLayout>
