--- a/branches/EADAndroidEngine_1/res/xml/preferences.xml
+++ b/branches/EADAndroidEngine_1/res/xml/preferences.xml
@@ -8,6 +8,20 @@
 			android:title="Enable audio" android:summary="Enable or disable audio" />
 
 	</PreferenceCategory>
+	
+	<PreferenceCategory android:title="e-Adventure games">
+
+		<PreferenceScreen android:title="Install from SDCard"
+			android:summary="Install ead games from SDCard">
+
+			<intent android:action="android.intent.action.PICK"
+				android:data="/sdcard"
+				android:mimeType="vnd.android.cursor.dir/lysesoft.andexplorer.file"
+				/>
+
+		</PreferenceScreen>
+
+	</PreferenceCategory>
 
 	
 
