--- a/branches/EADAndroidEngine_1/res/layout/game_activity_canvas.xml
+++ b/branches/EADAndroidEngine_1/res/layout/game_activity_canvas.xml
@@ -8,24 +8,24 @@
 		android:layout_width="fill_parent" android:layout_height="fill_parent"
 		android:id="@+id/canvas_surface" />
 
-	
 
-
-	<LinearLayout android:id="@+id/hidecontainer"
-		android:orientation="vertical" android:visibility="gone"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
-
+	<RelativeLayout android:id="@+id/hidecontainer"
+		android:layout_width="fill_parent" android:layout_height="fill_parent" android:visibility="gone"
+		xmlns:android="http://schemas.android.com/apk/res/android">
+		
 		<WebView android:id="@+id/webview" android:layout_width="fill_parent"
-			android:layout_height="270dip" android:scrollbars="vertical" />
-
-		<Button android:id="@+id/hideme1" android:layout_height="wrap_content" android:visibility="gone" android:layout_width="fill_parent" android:text="Continue"/>
-
-	</LinearLayout>
-
-
-
-
-
+			android:layout_height="270dip"  android:width="480dip" android:scrollbars="vertical" />		
+		
+		<Button android:text="Report" android:id="@+id/report_button"
+			android:layout_height="wrap_content" android:layout_width="wrap_content"
+			android:width="270dip" android:visibility="gone" android:layout_below="@+id/webview"></Button>
+			
+		<Button android:layout_toRightOf="@+id/report_button" android:layout_below="@+id/webview"
+			android:layout_width="wrap_content" android:id="@+id/close_button"
+			android:layout_height="wrap_content" android:text="Close"
+			android:width="270dip" android:visibility="gone"></Button>
+			
+	</RelativeLayout>
+			
 
 </FrameLayout>
