--- a/branches/EADAndroidEngine_1/res/layout/game_activity_canvas.xml
+++ b/branches/EADAndroidEngine_1/res/layout/game_activity_canvas.xml
@@ -10,22 +10,30 @@
 
 
 	<RelativeLayout android:id="@+id/hidecontainer"
-		android:layout_width="fill_parent" android:layout_height="fill_parent" android:visibility="gone"
-		xmlns:android="http://schemas.android.com/apk/res/android">
-		
+		android:layout_width="fill_parent" android:layout_height="fill_parent"
+		android:visibility="gone" xmlns:android="http://schemas.android.com/apk/res/android">
+
 		<WebView android:id="@+id/webview" android:layout_width="fill_parent"
-			android:layout_height="270dip"  android:width="480dip" android:scrollbars="vertical" />		
-		
+			android:layout_height="270dip" android:width="480dip"
+			android:scrollbars="vertical" />
+
 		<Button android:text="Report" android:id="@+id/report_button"
 			android:layout_height="wrap_content" android:layout_width="wrap_content"
-			android:width="270dip" android:visibility="gone" android:layout_below="@+id/webview"></Button>
-			
-		<Button android:layout_toRightOf="@+id/report_button" android:layout_below="@+id/webview"
-			android:layout_width="wrap_content" android:id="@+id/close_button"
-			android:layout_height="wrap_content" android:text="Close"
-			android:width="270dip" android:visibility="gone"></Button>
-			
+			android:width="270dip" android:visibility="gone"
+			android:layout_below="@+id/webview"></Button>
+
+		<Button android:layout_toRightOf="@+id/report_button"
+			android:layout_below="@+id/webview" android:layout_width="wrap_content"
+			android:id="@+id/close_button" android:layout_height="wrap_content"
+			android:text="Close" android:width="270dip" android:visibility="gone"></Button>
+
 	</RelativeLayout>
-			
+
+	<LinearLayout android:id="@+id/conversationLayout"
+		android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:focusable="true">
+	<ListView android:id="@+id/ListView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:cacheColorHint="#00000000" android:visibility="invisible">
+	</ListView>	
+	</LinearLayout>
+		
 
 </FrameLayout>
