--- a/branches/EADAndroidEngine_1/res/layout/repository_activity.xml
+++ b/branches/EADAndroidEngine_1/res/layout/repository_activity.xml
@@ -10,8 +10,8 @@
 			android:layout_width="fill_parent" android:layout_height="fill_parent"
 			xmlns:android="http://schemas.android.com/apk/res/android">
 			<ScrollView android:id="@+id/ScrollView01"
-				android:layout_width="fill_parent" android:scrollbars="vertical"
-				android:fadeScrollbars="true" android:layout_height="350dip">
+				android:layout_width="fill_parent" android:fadeScrollbars="true"
+				android:scrollbars="vertical" android:layout_height="350dip">
 				<FrameLayout android:id="@+id/FrameLayout01"
 					android:layout_width="fill_parent" android:layout_gravity="top"
 					android:layout_height="wrap_content">
