--- a/branches/EADAndroidEngine_1/res/layout/game_activity_canvas.xml
+++ b/branches/EADAndroidEngine_1/res/layout/game_activity_canvas.xml
@@ -30,7 +30,7 @@
 	</RelativeLayout>
 
 	<LinearLayout android:id="@+id/conversationLayout"
-		android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:focusable="true">
+		android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:focusable="true" android:background="@color/TransparentBlack">
 	<ListView android:id="@+id/ListView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:cacheColorHint="#00000000" android:visibility="invisible">
 	</ListView>	
 	</LinearLayout>
