--- a/branches/EADAndroidEngine_1/res/layout/game_activity_canvas.xml
+++ b/branches/EADAndroidEngine_1/res/layout/game_activity_canvas.xml
@@ -14,8 +14,7 @@
 		android:visibility="gone" xmlns:android="http://schemas.android.com/apk/res/android">
 
 		<WebView android:id="@+id/webview" android:layout_width="fill_parent"
-			android:layout_height="270dip" 
-			android:scrollbars="vertical" />
+		android:layout_height="270dip" android:scrollbars="vertical" />
 
 		<Button android:text="Report" android:id="@+id/report_button"
 			android:layout_height="wrap_content" android:layout_width="wrap_content"
