--- a/trunk/EAdMobileEngine/res/layout/game_activity_canvas.xml
+++ b/trunk/EAdMobileEngine/res/layout/game_activity_canvas.xml
@@ -13,18 +13,26 @@
 		android:layout_width="fill_parent" android:layout_height="fill_parent"
 		android:visibility="gone" xmlns:android="http://schemas.android.com/apk/res/android">
 
-		<WebView android:id="@+id/webview" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:scrollbars="vertical" />
+		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        	android:orientation="horizontal" android:layout_width="fill_parent"
+        	android:layout_height="wrap_content" android:layout_alignParentBottom="true"
+        	android:id="@+id/buttonLayout" android:gravity = "center">
+	
+			<Button android:text="Report" android:id="@+id/report_button"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:width="270dip" android:visibility="gone" android:layout_below="@+id/webview">
+			</Button>
 
-		<Button android:text="Report" android:id="@+id/report_button"
-			android:layout_height="wrap_content" android:layout_width="wrap_content"
-			android:width="270dip" android:visibility="gone" android:layout_below="@+id/webview">
-		</Button>
-
-		<Button android:layout_toRightOf="@+id/report_button"
-			android:layout_below="@+id/webview" android:layout_width="wrap_content"
-			android:id="@+id/close_button" android:layout_height="wrap_content"
-			android:text="Close" android:width="270dip" android:visibility="gone"></Button>
+			<Button android:layout_toRightOf="@+id/report_button"
+				android:layout_below="@+id/webview" android:layout_width="wrap_content"
+				android:id="@+id/close_button" android:layout_height="wrap_content"
+				android:text="Close" android:width="270dip" android:visibility="gone">
+			</Button>
+		</LinearLayout>
+		
+		<WebView android:layout_width="fill_parent" android:id="@+id/webview"
+        android:layout_above="@id/buttonLayout" android:layout_height="fill_parent" 
+        android:scrollbars="vertical"/>
 
 	</RelativeLayout>
 
