--- a/EAdMobileEngine/res/layout/game_activity_canvas.xml
+++ b/EAdMobileEngine/res/layout/game_activity_canvas.xml
@@ -36,11 +36,15 @@
 
 	</RelativeLayout>
 
-	<LinearLayout android:id="@+id/conversationLayout"
-		android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:focusable="true" android:background="@color/TransparentBlack">
-	<ListView android:id="@+id/ListView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:cacheColorHint="#00000000" android:visibility="invisible">
-	</ListView>	
-	</LinearLayout>
+	<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
+	
+		<RelativeLayout android:id="@+id/conversationLayout"
+		android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:focusable="true" android:background="@color/TransparentBlack" android:layout_alignParentBottom="true">
+			<ListView android:id="@+id/ListView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:cacheColorHint="#00000000" android:visibility="invisible">
+			</ListView>				
+		</RelativeLayout>
+		
+	</RelativeLayout>
 		
 
 </FrameLayout>
