--- a/EAdMobileEngine/res/layout/local_games_activity_listitem.xml
+++ b/EAdMobileEngine/res/layout/local_games_activity_listitem.xml
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_marginRight="6dip"
-        android:src="@drawable/icon" />
+        android:src="@drawable/launcher_icon" />
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="0dip"
