--- a/trunk/EAdMobileEngine/res/xml/preferences.xml
+++ b/trunk/EAdMobileEngine/res/xml/preferences.xml
@@ -44,6 +44,7 @@
          
              See <http://www.gnu.org/licenses/>
 -->
+
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
         <PreferenceCategory android:title="Engine Preferences">
                 <CheckBoxPreference android:id="@+id/check_box_pref_0"
@@ -70,10 +71,10 @@
                 android:summary="Install ead games from external storage"
                 android:key="InstallPref"/>
         </PreferenceCategory>
-        <PreferenceCategory android:title="Contact">
+        <PreferenceCategory android:title="Help">
         		<PreferenceScreen android:id="@+id/pref_screen_1"
-                android:title="eAdventure website"
-                android:summary="Contact us in our website"
+                android:title="About"
+                android:summary="About eAdventure Mobile"
                 android:key="WebPref"/>
         </PreferenceCategory>
 </PreferenceScreen>
