- i18n Fixed. Now the engine is set up in either Spanish or English depending on the device's locale - EngineReInstaller was modified to allow installing games placed under assets/ directly at startup - Support added to standalone generation of games as apps

--- a/EAdMobileEngine/res/layout/game_activity_canvas.xml
+++ b/EAdMobileEngine/res/layout/game_activity_canvas.xml
@@ -54,9 +54,9 @@
 
 	<RelativeLayout android:id="@+id/hidecontainer"
 		android:layout_width="fill_parent" android:layout_height="fill_parent"
-		android:visibility="gone" xmlns:android="http://schemas.android.com/apk/res/android">
+		android:visibility="gone">
 
-		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		<LinearLayout 
         	android:orientation="horizontal" android:layout_width="fill_parent"
         	android:layout_height="wrap_content" android:layout_alignParentBottom="true"
         	android:id="@+id/buttonLayout" android:gravity = "center">
